--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+spring.dataexchangesource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=xrp
+spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0.1
+
+server.error.include-message=always
+
+#Rates Collector parameters
+#cron expression -> hourly
+cron.expression=0 * * * * *
+base.url=http://data.fixer.io
+path1=/api
+path2=/latest
+query.param.name=access_key
+query.param.value=bcf9b179982188db36ceb730f1e52b67
 
